# tiny-text-data-base

./: .gitignore  Cargo.toml  README.md
examples/: todo.rs
src/: consts.rs  database.rs  lib.rs  storage.rs  table.rs  tests.rs  transaction.rs  value.rs
